...
    <string name="mozilla" translatable="false">Mozilla</string>
    <string name="firefox" translatable="false">Firefox</string>
    <string name="mpl" translatable="false">Mozilla Public License</string>
    <!-- Label used for buttons, e.g. in dialogs -->
    <string name="action_cancel">CANCEL</string>
    <!-- Label used for buttons, e.g. in dialogs -->
    <string name="action_ok">OK</string>

    <!-- This text is shown in the URL bar when it's empty -->
    <string name="urlbar_hint">Search or enter address</string>
    <!-- If the user has a URL copied in his/her clipboard, the search bar will offer a button for users to visit the website by a single tap. -->
    <string name="awesomebar_open_copied_link">Open Copied Link</string>
    <!-- A search suggestion for users to tap and switch to the opened tab. -->
...
    <string name="contextmenu_link_copy">Copy link address</string>
    <!-- Label used in the contextmenu shown when long-pressing on an image -->
    <string name="contextmenu_image_share">Share image</string>
    <!-- Label used in the contextmenu shown when long-pressing on an image -->
    <string name="contextmenu_image_copy">Copy image address</string>
    <!-- Label used in the contextmenu shown when long-pressing on an image -->
    <string name="contextmenu_image_save">Save image</string>
    <!-- Label used in the contextmenu shown when long-pressing on a link -->
    <string name="contextmenu_open_in_new_tab">Open link in new tab</string>
    <!-- Label used in the contextmenu shown when long-pressing on a image -->
    <string name="contextmenu_open_image_in_new_tab">Open image in new tab</string>

    <string name="new_name_upgrade_page_title">We have a new look!</string>
...
   

    <!-- Message shown after user denied location permission prompt. -->
    <string name="permission_toast_location_deny">Location permission is denied.</string>
    <!-- Message shown after user denied storage permission prompt. -->
    <string name="permission_toast_storage_deny">Storage permission is denied.</string>
    <string name="permission_handler_permission_dialog_setting">settings</string>
    <string name="permission_dialog_not_now">not now</string>
    <string name="permission_toast_location">Location not available. Give permission to access your location.</string>
    <string name="permission_toast_storage">Storage not available. Give permission to store photos and files on your device.</string>

    <!-- When the webpage request access to geolocation a dialog will popup.
        This is the title of the permission request dialog. Argument 1 is the url of the website. -->
    <string name="geolocation_dialog_message">%1$s \nwants to access your location.</string>
    <!-- A checkbox option in the dialog which ask users to give geolocation permission to the site.
        Users' decision will be remembered and future display of the dialog will be skipped if this
...
    <string name="setting_dialog_form_history">Form history</string>
    <string name="setting_dialog_cookies">Cookies</string>
    <string name="setting_dialog_cache">Cache</string>

    <!-- Download list-->
    <string name="no_downloads">No downloads</string>
    <string name="download_started">Downloading…</string>
    <string name="download_file_not_supported">Download protocol not supported</string>
    <string name="cannot_find_the_file">Cannot find the file</string>
    <string name="cannot_delete_the_file">Cannot delete the file.</string>
    <string name="download_completed">%1$s downloaded</string>
    <string name="download_deleted">%1$s was deleted</string>
    <string name="download_cancel">Download canceled</string>
    <string name="undo">Undo</string>
    <string name="open">Open</string>

    <!-- The message that indicates users can long press this menu button to see all download status in the panel. -->
    <string name="menu_longpress_downloads">Long press to open Downloads</string>
   
...

    <!--BrowsingHistoryActivity-->
    <string name="browsing_history_clear_btn">CLEAR BROWSING HISTORY</string>
    <string name="browsing_history_empty_view_msg">No browsing history</string>
    <string name="browsing_history_date_today">Today</string>
    <string name="browsing_history_date_yesterday">Yesterday</string>
    <string name="browsing_history_menu_delete">Delete</string>
    <string name="browsing_history_dialog_confirm_clear_message">Clear all browsing history?</string>
    <string name="browsing_history_dialog_btn_clear">Clear</string>

    <!-- Remove the item from Download file panel -->
    <string name="remove_from_list">Remove from list</string>

    <!-- Remove the item from Download file panel and delete the file -->
    <string name="delete_file">Delete file</string>

    <!-- Long Screenshot -->
    <!-- Message that is shown for a few seconds after a successful screenshot capture. -->
    <string name="screenshot_saved">Screenshot saved</string>
    <!-- Message that is shown for a few seconds after a failed screenshot capture. -->
    <string name="screenshot_failed">Failed to capture screenshot</string>
    <!-- Message shown when screenshot is being captured. -->
    <string name="screenshot_illustration">Capturing screenshot of entire page…</string>
    <!-- The label of an action that gives users an option to view the captured screenshot. This is shown alongside the temporary message which notify users of a successful screenshot capture. -->
    <string name="screenshot_view">VIEW</string>
    <!-- The label of an action that gives users an option to edit the captured screenshot. This is shown alongside the temporary message which notify users of a successful screenshot capture. -->
    <string name="screenshot_edit">EDIT</string>
    <!-- The label of an action that gives users an option to delete the captured screenshot. This is shown alongside the temporary message which notify users of a successful screenshot capture. -->
    <string name="screenshot_delete">DELETE</string>
    <!-- The label of an action that gives users an option to share the captured screenshot. This is shown alongside the temporary message which notify users of a successful screenshot capture. -->
    <string name="screenshot_share">SHARE</string>

    <!-- Snack bar message -->
    <string name="message_fallback_save_to_primary_external">No SD card detected. File was saved to internal storage.</string>
    <string name="message_start_to_save_to_removable_storage">File saved to SD card</string>
    <string name="message_removable_storage_space_not_enough">SD card is almost full. File was saved to internal storage.</string>

    <!-- ScreenshotGridFragment-->
    <string name="screenshot_grid_empty_text_title">No screenshots</string>

    <!-- This string is followed by the image of the button, keep the trailing whitespace.
        Final result: 'Tap [image] on the menu to capture an entire web page'. -->
...
