...
                    <ImageView
                        android:id="@+id/img_downloads"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:tint="@color/menu_tab_icon"
                        android:src="@drawable/menu_download"/>

                </FrameLayout>

            </org.mozilla.focus.widget.EqualDistributeGrid>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/paletteLightGreyA100"
                android:layout_marginTop="53dp" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/main_content"
                android:layout_marginTop="102dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/title"
...
