...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/screenshots_error" />

    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
        android:id="@+id/screenshot_viewer_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/screenshot_progressbar"
...
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/screenshot_viewer_btn_info"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/image_viewer_btn_bg_selector"
                    android:scaleType="centerInside"
                    android:src="@drawable/action_info"
                    android:tint="@color/image_view_btn_tint_color_selector" />
...
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/screenshot_viewer_btn_delete"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/image_viewer_btn_bg_selector"
                    android:scaleType="centerInside"
                    android:src="@drawable/menu_delete"
                    android:tint="@color/image_view_btn_tint_color_selector" />
...
