...
    <item name="telemetry_subcategory_id" type="id"/>

    <!-- Menu Items -->
    <item name="menu_bookmark" type="id"/>
    <item name="menu_download" type="id"/>
    <item name="menu_history" type="id"/>
    <item name="menu_screenshots" type="id"/>
    <item name="menu_turbomode" type="id"/>
    <item name="btn_private_browsing" type="id"/>
    <item name="menu_night_mode" type="id"/>
    <item name="menu_blockimg" type="id"/>
    <item name="menu_find_in_page" type="id"/>
    <item name="menu_delete" type="id"/>
...

    <!-- Bottom Bar Items -->
    <item name="bottom_bar_tab_counter" type="id"/>
    <item name="bottom_bar_menu" type="id"/>
    <item name="bottom_bar_home" type="id"/>
    <item name="bottom_bar_search" type="id"/>
    <item name="bottom_bar_capture" type="id"/>
    <item name="bottom_bar_pin_shortcut" type="id"/>
    <item name="bottom_bar_bookmark" type="id"/>
    <item name="bottom_bar_refresh" type="id"/>
    <item name="bottom_bar_share" type="id"/>
    <item name="bottom_bar_next" type="id"/>
    <item name="bottom_bar_private_home" type="id"/>
...
